# Zecca_Lorenzo--Social_Security--EPP_2023

./: .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md  enhancement.md
paper/: ss_us_pres.tex  task_paper.py
src/ss_us/: __init__.py
src/ss_us/analysis/: task_analysis.py
src/ss_us/data_management/: __init__.py  clean_data.py  task_import_data.py
src/ss_us/final/: __init__.py  task_final.py
ss_us/: CITATION  environment.yml
ss_us/.github/ISSUE_TEMPLATE/: documentation.md  question.md
ss_us/paper/: ss_us.tex
ss_us/src/ss_us/analysis/: predict.py  steady_states.py  task_analysis.py  task_plot.py  task_plot_eff.py  task_steady_states.py
ss_us/src/ss_us/data_management/: import_data.py  task_data_management.py
tests/analysis/: test_model.py  test_predict.py
tests/data_management/: test_clean_data.py
